[package]
name = "tfconfig"
version = "0.2.3"
edition = "2021"
authors = ["ASleepyCat dyeom340@gmail.com"]
license = "MPL-2.0"
description = "Rust port of HashiCorp's terraform-config-inspect Go library"
readme = "README.md"
repository = "https://github.com/ASleepyCat/tfconfig-rs"
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hcl-rs = "0.18.0"
tempdir = "0.3.7"
thiserror = "2.0.11"
